--- a/package.json
+++ b/package.json
@@ -6,5 +6,18 @@
   "repository": "git@github.com:scm-manager/integration-test-runner.git",
   "author": "Konstantin Schaper <konstantin.schaper@cloudogu.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "@octokit/rest": "^18.0.9",
+    "fs-extra": "^9.0.1",
+    "pino": "^6.7.0",
+    "pino-pretty": "^4.3.0",
+    "semver": "^7.3.2",
+    "yargs": "^16.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.6",
+    "@types/pino": "^6.3.3",
+    "@types/yargs": "^15.0.9"
+  }
 }
