--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@octokit/rest": "^18.0.9",
+    "@types/cypress": "^1.1.3",
+    "adm-zip": "^0.4.16",
+    "axios": "^0.21.0",
+    "cypress": "^4.12.0",
+    "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^9.0.1",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
     "semver": "^7.3.2",
+    "xml2js": "^0.4.23",
     "yargs": "^16.1.0"
   },
   "devDependencies": {
