--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "cypress-cucumber-preprocessor": "^4.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^9.0.1",
+    "human-readable-ids": "^1.0.4",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
+    "resolve": "^1.19.0",
     "semver": "^7.3.2",
     "typescript": "^4.0.5",
     "xml2js": "^0.4.23",
-    "yargs": "^16.1.0",
-    "resolve": "^1.19.0"
+    "yargs": "^16.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
