--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.0",
     "cypress": "^6.2.1",
     "cypress-cucumber-preprocessor": "^4.0.0",
+    "cypress-file-upload": "^5.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^9.0.1",
     "human-readable-ids": "^1.0.4",
