Fetch gradle.properties to extract the version.

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "cypress-cucumber-preprocessor": "^4.0.0",
     "cypress-file-upload": "^5.0.0",
     "fluent-ffmpeg": "^2.1.2",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^9.1.0",
     "human-readable-ids": "^1.0.4",
+    "isomorphic-fetch": "^3.0.0",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
     "resolve": "^1.19.0",
