--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "dependencies": {
     "@cypress/browserify-preprocessor": "^3.0.1",
+    "@cypress/webpack-preprocessor": "^5.6.0",
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@octokit/rest": "^18.0.9",
+    "@scm-manager/babel-preset": "^2.11.2",
     "@types/cypress": "^1.1.3",
     "adm-zip": "^0.4.16",
     "axios": "^0.21.0",
+    "babel-loader": "^8.2.2",
     "cypress": "^6.2.1",
     "cypress-cucumber-preprocessor": "^4.0.0",
     "cypress-file-upload": "^5.0.0",
@@ -37,6 +40,7 @@
     "semver": "^7.3.2",
     "tsify": "^5.0.2",
     "typescript": "^4.0.5",
+    "webpack": "^4.46.0",
     "xml2js": "^0.4.23",
     "yargs": "^16.1.0"
   },
