--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scm-manager/integration-test-runner",
-  "version": "2.1.1",
+  "version": "2.2.0-SNAPSHOT",
   "description": "Cli application for running integration tests",
   "main": "cli.js",
   "repository": "git@github.com:scm-manager/integration-test-runner.git",
